--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -7,3 +7,6 @@ find_package(fmt)
 
 add_executable(day1 day1/main.cpp)
 target_link_libraries(day1 fmt::fmt-header-only)
+
+add_executable(day2 day2/main.cpp)
+target_link_libraries(day2 fmt::fmt-header-only)
