--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,3 +10,6 @@ target_link_libraries(day1 fmt::fmt-header-only)
 
 add_executable(day2 day2/main.cpp)
 target_link_libraries(day2 fmt::fmt-header-only)
+
+add_executable(day3 day3/main.cpp)
+target_link_libraries(day3 fmt::fmt-header-only)
