--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,3 +16,6 @@ target_link_libraries(day3 fmt::fmt-header-only)
 
 add_executable(day4 day4/main.cpp)
 target_link_libraries(day4 fmt::fmt-header-only)
+
+add_executable(day5 day5/main.cpp)
+target_link_libraries(day5 fmt::fmt-header-only)
