--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,3 +19,6 @@ target_link_libraries(day4 fmt::fmt-header-only)
 
 add_executable(day5 day5/main.cpp)
 target_link_libraries(day5 fmt::fmt-header-only)
+
+add_executable(day6 day6/main.cpp)
+target_link_libraries(day6 fmt::fmt-header-only)
