--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,3 +28,6 @@ target_link_libraries(day7 fmt::fmt-header-only)
 
 add_executable(day8 day8/main.cpp)
 target_link_libraries(day8 fmt::fmt-header-only)
+
+add_executable(day9 day9/main.cpp)
+target_link_libraries(day9 fmt::fmt-header-only)
